--- a/style.css
+++ b/style.css
@@ -106,3 +106,47 @@ body {
     margin-top: 10px;
     display: none;
 }
+
+@media (max-width: 480px) {
+    .card {
+        width: 95%;
+    }
+
+    .search input {
+        height: 40px;
+        width: 150px;
+        font-size: 14px;
+    }
+
+    .search button {
+        height: 40px;
+        width: 40px;
+        margin-left: -10px;
+    }
+
+    .weather h1 {
+        font-size: 30px;
+        font-weight: 300;
+    }
+
+    .weather h2 {
+        font-size: 40px;
+        font-weight: 300;
+    }
+
+    .col img {
+        width: 20px;
+        margin: 10px;
+        margin-left: -30px;
+    }
+    
+    .humidity {
+        margin-right: 80px;
+        margin-left: auto;
+    }
+
+    .humidity, .wind {
+        font-size: 15px;
+    }
+
+}
